# app/Controllers/GameController.php
@@ -23,6 +23,46 @@ class GameController extends BaseController
 
     }
 
+    /**
+     * @OA\GET(
+     *      path="/games?popular={num}",
+     *      description="Liste des jeux les plus populaires",
+     *      @OA\Parameter(
+     *          name="num",
+     *          in="query",
+     *          required=true,
+     *          @OA\Schema(type="integer")
+     *      ),
+     *      @OA\Response(
+     *          response="200",
+     *          description="Liste des jeux les plus populaires",
+     *          @OA\JsonContent(type="object"),
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="Page not found",
+     *          @OA\JsonContent(type="object"),
+     *      )
+     * )
+     */
+
+    /**
+     * @OA\GET(
+     *      path="/games",
+     *      description="Liste des jeux",
+     *      @OA\Response(
+     *          response="200",
+     *          description="Liste des jeux",
+     *          @OA\JsonContent(type="object"),
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="Page not found",
+     *          @OA\JsonContent(type="object"),
+     *      )
+     * )
+     */
+
     public function getGames() {
             $model = new GameModel();
             $games = $model->getGames();
