# public/swagger/swagger.json
@@ -13,6 +13,7 @@
     "paths": {
         "/auth": {
             "post": {
+                "description": "Permet de se connecter et créer un token",
                 "operationId": "App\\Controllers\\Auth::create",
                 "requestBody": {
                     "content": {
@@ -33,7 +34,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Connecté !",
+                        "description": "True",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -55,8 +56,74 @@
                 }
             }
         },
+        "/games?popular={num}": {
+            "get": {
+                "description": "Liste des jeux les plus populaires",
+                "parameters": [
+                    {
+                        "name": "num",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Liste des jeux les plus populaires",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Page not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/games": {
+            "get": {
+                "description": "Liste des jeux",
+                "operationId": "App\\Controllers\\GameController::getGames",
+                "responses": {
+                    "200": {
+                        "description": "Liste des jeux",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Page not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/servers?id={id}": {
             "get": {
+                "description": "Détail d'un serveur",
                 "parameters": [
                     {
                         "name": "id",
@@ -91,6 +158,7 @@
                 }
             },
             "put": {
+                "description": "Modifier les détails d'un serveur",
                 "operationId": "App\\Controllers\\ServerController::putServer",
                 "parameters": [
                     {
@@ -139,7 +207,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Serveur moifié !",
+                        "description": "True",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -158,9 +226,15 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
+                "description": "Supprimer un serveur",
                 "operationId": "App\\Controllers\\ServerController::deleteServer",
                 "parameters": [
                     {
@@ -174,7 +248,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Supprimer un serveur",
+                        "description": "True",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -183,11 +257,17 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/servers?game={id}": {
             "get": {
+                "description": "Liste les serveurs en fonction du jeu",
                 "operationId": "App\\Controllers\\ServerController::getServers",
                 "parameters": [
                     {
@@ -201,7 +281,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Liste des serveurs en fonction du jeu",
+                        "description": "Liste des serveurs",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -223,8 +303,77 @@
                 }
             }
         },
+        "/servers": {
+            "post": {
+                "description": "Créer un serveur",
+                "operationId": "App\\Controllers\\ServerController::postServer",
+                "requestBody": {
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "properties": {
+                                    "name_server": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "miniature": {
+                                        "type": "string"
+                                    },
+                                    "port": {
+                                        "type": "string"
+                                    },
+                                    "website": {
+                                        "type": "string"
+                                    },
+                                    "ip": {
+                                        "type": "string"
+                                    },
+                                    "discord": {
+                                        "type": "string"
+                                    },
+                                    "image_servers": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "True",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Des champs sont vides",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/users": {
             "put": {
+                "description": "Modifie les détails d'un utilisateur",
                 "operationId": "App\\Controllers\\UserController::putUser",
                 "requestBody": {
                     "content": {
@@ -251,7 +400,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Connecté !",
+                        "description": "True",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -262,6 +411,88 @@
                     },
                     "401": {
                         "description": "Erreur login / password",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "description": "Créer un utilisateur (Inscription)",
+                "operationId": "App\\Controllers\\UserController::postUser",
+                "requestBody": {
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "properties": {
+                                    "login": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "password"
+                                    },
+                                    "cpassword": {
+                                        "type": "password"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "True",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Erreurs champs",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users?id={id}": {
+            "delete": {
+                "description": "Supprime un utilisateur",
+                "operationId": "App\\Controllers\\UserController::deleteUser",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "True",
                         "content": {
                             "application/json": {
                                 "schema": {
